--- a/home/AppData/Roaming/Code/User/profiles/-53714bc5/settings.json
+++ b/home/AppData/Roaming/Code/User/profiles/-53714bc5/settings.json
@@ -154,6 +154,22 @@
     "evenBetterToml.formatter.indentTables": true,
     "evenBetterToml.schema.links": true,
     "evenBetterToml.semanticTokens": true,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/*.html": true,
+        "**/*_cache": true,
+        "**/.history/**": true,
+        "**/.hypothesis": true,
+        "**/.tmp-projections": true,
+        "**/.venv": true,
+        "**/.virtual_documents": true,
+        "**/__pycache__": true,
+        "**/History_**": true,
+    },
     "files.trimTrailingWhitespace": true,
     "github.copilot.chat.codesearch.enabled": true,
     "github.copilot.chat.editor.temporalContext.enabled": true,
