--- a/home/AppData/Roaming/Code/User/profiles/-57dcdd9a/settings.json
+++ b/home/AppData/Roaming/Code/User/profiles/-57dcdd9a/settings.json
@@ -53,7 +53,7 @@
     "editor.defaultColorDecorators": "auto",
     "editor.definitionLinkOpensInPeek": true,
     "editor.fontFamily": "'FiraCode Nerd Font Mono', 'Cascadia Code', Consolas, 'Courier New', monospace",
-    "editor.minimap.autohide": true,
+    "editor.minimap.autohide": "mouseover",
     "editor.minimap.renderCharacters": false,
     "editor.minimap.scale": 3,
     "editor.quickSuggestions": {
@@ -82,6 +82,13 @@
     "evenBetterToml.schema.links": true,
     "evenBetterToml.semanticTokens": true,
     "files.autoSave": "onFocusChange",
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true
+    },
     "files.trimTrailingWhitespace": true,
     "githubLocalActions.dockerDesktopPath": "C:/Program Files/Docker/Docker/Docker Desktop.exe",
     "haskell.manageHLS": "GHCup",
