--- a/home/AppData/Roaming/Code/User/profiles/-70f5752b/settings.json
+++ b/home/AppData/Roaming/Code/User/profiles/-70f5752b/settings.json
@@ -141,6 +141,22 @@
     "evenBetterToml.formatter.indentTables": true,
     "evenBetterToml.schema.links": true,
     "evenBetterToml.semanticTokens": true,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/*.html": true,
+        "**/*_cache": true,
+        "**/.history/**": true,
+        "**/.vs": true,
+        "**/bin": true,
+        "**/obj": true,
+        "**/TestResults": true,
+        "artifacts": true,
+        "**/*.pdf": true
+    },
     "files.trimTrailingWhitespace": true,
     "git.openRepositoryInParentFolders": "always",
     "github.copilot.enable": {
