Update VS Code settings.

--- a/home/AppData/Roaming/Code/User/profiles/-53714bc5/settings.json
+++ b/home/AppData/Roaming/Code/User/profiles/-53714bc5/settings.json
@@ -168,7 +168,7 @@
         "**/.venv": true,
         "**/.virtual_documents": true,
         "**/__pycache__": true,
-        "**/History_**": true,
+        "**/History_**": true
     },
     "files.trimTrailingWhitespace": true,
     "github.copilot.chat.codesearch.enabled": true,
